--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -20,13 +20,22 @@ jobs:
       - name: Copy conftest.py
         run: |
           cp conftest.py moto/tests
-#      - name: Start LocalStack
-#        env:
-#          LOCALSTACK_API_KEY: ${{ secrets.LOCALSTACK_API_KEY }}
-#          DNS_ADDRESS: 127.0.0.1
-#        run: |
-#          pip install localstack awscli-local[ver1] # install LocalStack cli and awslocal
-#          docker pull localstack/localstack-pro     # Make sure to pull the latest version of the image
+      - name: Prepare Extension
+        run: |
+          cd collect_raw_metric_data_extension && make install
+      - name: Setup LocalStack
+        env:
+          LOCALSTACK_API_KEY: ${{ secrets.LOCALSTACK_API_KEY }}
+          TMP_USER: ${{ secrets.TMP_USER }}
+          TMP_PW: ${{ secrets.TMP_PW }}
+          #DNS_ADDRESS: 127.0.0.1
+        run: |
+          source .venv/bin/activate
+          pip install localstack awscli-local[ver1] # install LocalStack cli and awslocal
+          docker pull localstack/localstack-pro     # Make sure to pull the latest version of the image
+          localstack login -u $TMP_USER -p $TMP_PW
+          localstack extensions init
+          localstack extensions dev enable ./collect-raw-metric-data-extension
 #          localstack start -d                       # Start LocalStack in the background
 #          echo "Waiting for LocalStack startup..."  # Wait 30 seconds for the LocalStack container
 #          localstack wait -t 30                     # to become ready before timing out
@@ -41,7 +50,12 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: pytest-result.xml
-          path: target/reports/pytest.xml
+          name: test-metrics
+          path: target/reports
+      - name: Logout LocalStack
+        if: always()
+        run: |
+          source .venv/bin/activate
+          localstack logout
 
 
