--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,6 +2,12 @@ name: moto-integration-tests
 on:
   schedule:
     - cron: '0 6 * * 0'
+  workflow_dispatch:
+    inputs:
+      targetBranch:
+        required: false
+        type: string
+        default: 'main'
 jobs:
   run-moto-tests:
     runs-on: ubuntu-latest
@@ -13,6 +19,7 @@ jobs:
         with:
           repository: getmoto/moto
           path: moto
+          ref: ${{ github.event.inputs.targetBranch || 'main' }}
       - name: Install dependencies
         run: |
           python -m venv .venv
