--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,12 +20,13 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.inputs.targetBranch || github.ref_name }}
       - name: Checkout Moto
         uses: actions/checkout@v3
         with:
           repository: getmoto/moto
           path: moto
-          ref: ${{ github.event.inputs.targetBranch || 'main' }}
       - name: Install dependencies
         run: |
           python -m venv .venv
