--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m venv .venv
           source .venv/bin/activate
-          pip install pytest requests
+          pip install pytest requests pytest-timeout
           cd moto && make init
       - name: Copy conftest.py
         run: |
@@ -48,7 +48,7 @@ jobs:
            LOCALSTACK_API_KEY: ${{ secrets.LOCALSTACK_API_KEY }}
         run: |
           source .venv/bin/activate
-          python -m pytest --durations=10 --capture=no --junitxml=target/reports/pytest.xml moto/tests --tb=line
+          python -m pytest --durations=10 --timeout=300 --capture=no --junitxml=target/reports/pytest.xml moto/tests --tb=line
       - name: Archive Test Result
         if: always()
         uses: actions/upload-artifact@v3
