--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,8 +15,11 @@ on:
   push:
     branches:
       - main
+
 permissions:
   contents: write
+  checks: write
+  pull-requests: write
 
 jobs:
   run-moto-tests:
