update localstack-api-key env

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,19 +46,16 @@ jobs:
           cd collect-raw-metric-data-extension && make install
       - name: Setup LocalStack
         env:
-          LOCALSTACK_API_KEY: ${{ secrets.LOCALSTACK_API_KEY }}
-          TMP_USER: ${{ secrets.TMP_USER }}
-          TMP_PW: ${{ secrets.TMP_PW }}
+          LOCALSTACK_API_KEY: ${{ secrets.TEST_LOCALSTACK_API_KEY }}
         run: |
           source .venv/bin/activate
           pip install --pre localstack
           docker pull localstack/localstack-pro     # Make sure to pull the latest version of the image
-          localstack login -u $TMP_USER -p $TMP_PW  # login is currently required
           localstack extensions init
           localstack extensions dev enable ./collect-raw-metric-data-extension
       - name: Run Moto Integration Tests against LocalStack
         env:
-           LOCALSTACK_API_KEY: ${{ secrets.LOCALSTACK_API_KEY }}
+           LOCALSTACK_API_KEY: ${{ secrets.TEST_LOCALSTACK_API_KEY }}
         run: |
           source .venv/bin/activate
           python -m pytest --durations=10 --services=${{ inputs.selected-services || 'all' }} --timeout=300 --capture=no --junitxml=target/reports/pytest.xml moto/tests --tb=line
