fixup localstack cli version

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -49,7 +49,7 @@ jobs:
           LOCALSTACK_API_KEY: ${{ secrets.TEST_LOCALSTACK_API_KEY }}
         run: |
           source .venv/bin/activate
-          pip install --pre localstack
+          pip install localstack
           docker pull localstack/localstack-pro     # Make sure to pull the latest version of the image
           localstack extensions init
           localstack extensions dev enable ./collect-raw-metric-data-extension
