--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -53,6 +53,10 @@ jobs:
           docker pull localstack/localstack-pro     # Make sure to pull the latest version of the image
           localstack extensions init
           localstack extensions dev enable ./collect-raw-metric-data-extension
+          DEBUG=1 DISABLE_EVENTS=1 DNS_ADDRESS=127.0.0.1 EXTENSION_DEV_MODE=1 localstack start -d
+          echo "Waiting for LocalStack startup..."
+          localstack wait -t 30
+          echo "Startup complete"
       - name: Run Moto Integration Tests against LocalStack
         env:
            LOCALSTACK_API_KEY: ${{ secrets.TEST_LOCALSTACK_API_KEY }}
@@ -65,17 +69,17 @@ jobs:
         with:
           name: test-metrics
           path: target/reports
-      - name: Logout LocalStack
-        if: always()
-        run: |
-          source .venv/bin/activate
-          localstack logout
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
           junit_files: target/reports/*.xml
           check_name: Moto Integration Tests against LocalStack Results
+      - name: LocalStack Logs
+        if: always()
+        run:
+          source .venv/bin/activate
+          localstack logs
       - name: Prevent Workflows from getting Stale
         if: always()
         uses: gautamkrishnar/keepalive-workflow@v1
